--- a/src/app/layout/auth/footer/footer.component.html
+++ b/src/app/layout/auth/footer/footer.component.html
@@ -1,6 +1,29 @@
-<section class="amazonfooter" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2" ngClass.md="amazonhome3" fxLayout="row" fxLayoutAlign="start center">
+<section *ngIf="!isMobile()" class="amazonfooter" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2"
+    ngClass.md="amazonhome3" fxLayout="row" fxLayoutAlign="start center">
     <div class="header" fxLayout="row" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
         fxFlex.xl="1910px">
         <p>Copyright ©2021 All rights reserved </p>
     </div>
 </section>
+
+
+
+<!-- <section *ngIf="isMobile()" class="mobile-amazonfooter" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2"
+    ngClass.md="amazonhome3" fxLayout="row" fxLayoutAlign="start center">
+    <div class="header" fxLayout="row" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
+        fxFlex.xl="1910px">
+        <div class="mobile-footer" fxLayout="row">
+<ul>
+
+    <li><mat-icon>home</mat-icon></li>
+    <li><mat-icon>home</mat-icon></li>
+    <li><mat-icon>home</mat-icon></li>
+    <li><mat-icon>home</mat-icon></li>
+</ul>
+
+
+
+        </div>
+
+    </div>
+</section> -->
