--- a/src/app/layout/auth/footer/footer.component.scss
+++ b/src/app/layout/auth/footer/footer.component.scss
@@ -21,3 +21,30 @@ section.amazonfooter p {
 section.amazonfooter.amazonhome1 {
     margin: 0;
 }
+
+
+section.mobile-amazonfooter {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: white;
+    z-index: 1;
+    height: 43px;
+    box-shadow: 1px -2px 7px 1px #ddd;
+}
+.mobile-footer {
+    width: 100%;
+}
+.mobile-footer ul{
+    display: flex;
+    width: 100%;
+    padding: 0;
+    list-style: none;
+}
+.mobile-footer ul li {
+    width: 25%;
+    text-align: center;
+}
+.mobile-footer ul li mat-icon {
+    font-size: 30px;
+}
