--- a/src/app/layout/full-view/full-view.component.html
+++ b/src/app/layout/full-view/full-view.component.html
@@ -59,9 +59,9 @@
                                 <li *ngFor="let descption of product.description"> {{descption.desc}}</li>
                             </ul>
                             <div class="addto-cart" fxLayout="row">
-                                <button>
+                                <!-- <button>
                                     <mat-icon>add_shopping_cart</mat-icon>Add to Cart
-                                </button>
+                                </button> -->
                                 <button class="buy">
                                     <mat-icon>play_arrow</mat-icon>But Now
                                 </button>
