--- a/src/app/layout/full-view/full-view.component.html
+++ b/src/app/layout/full-view/full-view.component.html
@@ -63,7 +63,9 @@
                                     <mat-icon>add_shopping_cart</mat-icon>Add to Cart
                                 </button> -->
                                 <button class="buy">
-                                    <mat-icon>play_arrow</mat-icon>But Now
+                                    <a target="blank" href="{{product.productLink}}">
+                                        <mat-icon>play_arrow</mat-icon>Buy Now
+                                    </a>
                                 </button>
                             </div>
                         </div>
