--- a/src/app/layout/blog-three/blog-three.component.html
+++ b/src/app/layout/blog-three/blog-three.component.html
@@ -40,6 +40,13 @@
                 <p *ngFor="let paragraph of blog.paragraphs">
                     {{paragraph.para}}
                 </p>
+                <p *ngFor="let paragraph of blog.paragraphTwo">
+                    {{paragraph.para}}
+                </p>
+
+                <p *ngFor="let paragraph of blog.paragraphThree">
+                    {{paragraph.para}}
+                </p>
             </div>
 
         </div>
