--- a/src/app/layout/blog-two/blog-two.component.html
+++ b/src/app/layout/blog-two/blog-two.component.html
@@ -38,6 +38,12 @@
                 <p *ngFor="let paragraph of blog.paragraphs">
                     {{paragraph.para}}
                 </p>
+                <p *ngFor="let paragraph of blog.paragraphTwo">
+                    {{paragraph.para}}
+                </p>
+                <p *ngFor="let paragraph of blog.paragraphThree">
+                    {{paragraph.para}}
+                </p>
             </div>
         </div>
     </div>
