--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -62,6 +62,16 @@
                         <p *ngFor="let paragraph of blog.paragraphs">
                             {{paragraph.para}}
                         </p>
+
+                        <p *ngFor="let paragraph of blog.paragraphTwo">
+                            {{paragraph.para}}
+                        </p>
+
+                        <p *ngFor="let paragraph of blog.paragraphThree">
+                            {{paragraph.para}}
+                        </p>
+
+
                     </div>
                 </div>
             </div>
