--- a/src/app/layout/blog-two/blog-two.component.html
+++ b/src/app/layout/blog-two/blog-two.component.html
@@ -44,6 +44,14 @@
                 <p *ngFor="let paragraph of blog.paragraphThree">
                     {{paragraph.para}}
                 </p>
+
+                <button class="buy">
+                    <a target="blank" href="{{blog.productLink}}">
+                        <mat-icon>play_arrow</mat-icon>Buy Now
+                    </a>
+                </button>
+
+
             </div>
         </div>
     </div>
