--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -71,6 +71,12 @@
                             {{paragraph.para}}
                         </p>
 
+                        <button class="buy">
+                            <a target="blank" href="{{blog.productLink}}">
+                                <mat-icon>play_arrow</mat-icon>Buy Now
+                            </a>
+                        </button>
+
 
                     </div>
                 </div>
