--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1122,7 +1122,7 @@
                                     <mat-icon>visibility</mat-icon>View More
                                 </button>
                             </div>
-                        </div>
+                        </div> 
                     </div>
 
                     <div class="Product">
@@ -1290,7 +1290,7 @@
                         Google Assistant/Siri: A straightforward catch press interfaces you to your cell phone's Voice
                         Assistant to get headings, play music and speak with contacts.</p> -->
                         <a target="blank"
-                            href="https://review.stackasian.com/blog/Sony wf-xb700 Wireless Extra Bass">Read More
+                            href="https://review.stackasian.com/blog/Sony-wf-xb700-Wireless-Extra-Bass">Read More
                             <mat-icon>arrow_right_alt
                             </mat-icon>
                         </a>
