--- a/src/app/layout/blog-three/blog-three.component.html
+++ b/src/app/layout/blog-three/blog-three.component.html
@@ -47,6 +47,13 @@
                 <p *ngFor="let paragraph of blog.paragraphThree">
                     {{paragraph.para}}
                 </p>
+
+                <button class="buy">
+                    <a target="blank" href="{{blog.productLink}}">
+                        <mat-icon>play_arrow</mat-icon>Buy Now
+                    </a>
+                </button>
+
             </div>
 
         </div>
