--- a/src/app/layout/full-view/full-view.component.scss
+++ b/src/app/layout/full-view/full-view.component.scss
@@ -107,6 +107,11 @@
     align-items: center;
     font-weight: 500;
 }
+.addto-cart button a{
+    color: #fff;
+    text-decoration: none;
+}
+
 .addto-cart .buy{
     background: #ffc800;
 
@@ -122,7 +127,7 @@
     width: auto;
     position: relative;
     left: -3px;
-    top: 0.4px;
+    top: 4.4px;
 }
 .star {
     align-items: center;
