--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -801,24 +801,30 @@ section.home.amazonhome3 .allcate {
 }
 .cate {
     border-radius: 50%;
-    width: 160px;
-    height: 160px;
-    padding: 2px;
+    width: 130px;
+    height: 130px;
+    padding: 0px;
     background: #fff;
-    margin: 35px auto 0;
+    margin: 30px auto 0;
 }
 .cate-text {
     background: #f8f8f8;
-    width: 18%;
-    margin: 1%;
-    padding-bottom: 2.5pc;
+    width: 14.5%;
+    margin: 1.3% 0.7% 0;
+    padding-bottom: 1.5pc;
 
 }
+.cate a {
+    display: block;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    place-content: center;
+    align-items: center;
+}
 .cate a img {
-    width: 120px;
-    height: 160px;
-    border-radius: 50%;
-    background: #fff;
+    width: 60%;
+    height: 100%;
     object-fit: contain;
     margin: 0 auto;
     display: flex;
@@ -826,17 +832,17 @@ section.home.amazonhome3 .allcate {
     align-items: center;
 }
 .cate-text h1 {
-    font-size: 15px;
+    font-size: 13px;
     text-align: center;
-    line-height: 21px;
-    padding: 10px 20px;
+    line-height: 19px;
+    padding: 10px 15px;
     font-family: ppoins;
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
     margin-bottom: 0;
     padding-bottom: 0;
     text-transform: capitalize;
-    letter-spacing: -0.2px;
+    letter-spacing: 0.3px;
     cursor: pointer;
 }
 ::ng-deep .new.category-amazon .carousel {
