--- a/src/app/layout/category/category.component.html
+++ b/src/app/layout/category/category.component.html
@@ -91,7 +91,7 @@
                                         </a>
 
                                     </button>
-                                    <button style="background: #ff9f0d;" [routerLink]="'/product/'+product.productName">
+                                    <button style="background: #ffc63d;" [routerLink]="'/product/'+product.productName">
                                         <mat-icon>visibility</mat-icon><span>View More</span>
                                     </button>
                                 </div>
