--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -456,8 +456,6 @@
                     </div>
                 </div>
 
-
-
                 <div class="Product">
                     <div class="newatricel-off">
                         <h1>Sale</h1>
@@ -599,8 +597,6 @@
                     </div>
                 </div>
 
-
-
                 <div class="Product">
                     <div class="newatricel-off">
                         <h1>Sale</h1>
@@ -675,6 +671,88 @@
     </div>
 
 
+    <div class="category-featured-amazon allbanners-i">
+        <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
+            fxFlex.lg="1270px" fxFlex.xl="1910px">
+            <div class="heading">
+                <p> Shop Top Amazon </p>
+                <h1> Top Rated and Best <span>Products</span></h1>
+            </div>
+            <div class="category-featured" fxLayout="row">
+                <div class="products-text">
+                    <div class="products_all">
+                        <h1> Find your ideal TV </h1>
+                        <a>
+                                <img src="/assets/images/all1.jpg">
+                            </a>
+                        <p>View More</p>
+                    </div>
+                    <div class="products_all">
+                        <h1> Get fit at home
+                            </h1>
+                            <a>
+                                    <img src="/assets/images/all2.jpg">
+                                </a>
+                        <p>View More</p>
+                    </div>
+                </div>
+                <div class="products-text">
+                    <div class="products_all">
+                        <h1> Shop by Category
+                        </h1>
+                        <a>
+                                <img src="/assets/images/all3.jpg">
+                            </a>
+                        <p>View More</p>
+                    </div>
+                    <div class="products_all">
+                        <h1>Best Wooden Matrial </h1>
+                        <a>
+                                <img src="/assets/images/all4.jpg">
+                            </a>
+                        <p>View More</p>
+                    </div>
+                </div>
+                <div class="products-text">
+                    <div class="products_all">
+                        <h1> Find All Baby Products </h1>
+                        <a>
+                                <img src="/assets/images/all5.jpg">
+                            </a>
+                        <p>View More</p>
+                    </div>
+                    <div class="products_all">
+                        <h1>Shop by Category
+                        </h1>
+                        <a>
+                                <img src="/assets/images/all6.jpg">
+                            </a>
+                        <p>View More</p>
+                    </div>
+                </div>
+                <div class="products-text lastpic-d">
+                    <div class="products_all">
+                        <a class="imgb">
+                            <img src="/assets/images/off4.jpg">
+                        </a>
+                        <div class="products_all mid-img-p">
+                                <h1>Shop by Category
+                                </h1>
+                                <a>
+                                        <img src="/assets/images/all7.jpg">
+                                    </a>
+                                <p>View More</p>
+                            </div>
+                            <a class="imgb">
+                                    <img src="/assets/images/off3.jpg">
+                                </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 
     <!----------top-deal-------------->
     <div class="topdeald">
@@ -746,6 +824,8 @@
             </div>
         </div>
 
+
+        
         <!----------top-deal-------------->
 
         <div class="new-featured-amazon topdeal">
@@ -933,14 +1013,12 @@
 
 
 
-
-
         <!----------top-deal-------------->
         <div class="new-featured-amazon allbanner">
             <div class="new featured-amazon" fxLayout="column" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="588"
                 fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px" fxFlex.xl="1910px">
                 <div class="heading">
-                    <p>New launches in AMAZON electronics</p>
+                    <p>New launches in AMAZON Electronics</p>
                     <h1>Best <span>offers</span></h1>
                 </div>
                 <div fxLayout="row" class="pics">
@@ -1341,7 +1419,7 @@
         <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
             fxFlex.lg="1270px" fxFlex.xl="1910px">
             <div class="heading">
-                <p>Popular Item in the market</p>
+                <p>Popular Item in the Market</p>
                 <h1>Featured <span>Product</span></h1>
             </div>
             <mat-carousel timings="250ms ease-in" [autoplay]="true" color="accent" maxWidth="auto" [loop]="true"
@@ -1429,7 +1507,7 @@
         <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
             fxFlex.lg="1270px" fxFlex.xl="1910px">
             <div class="heading">
-                <p>Popular Item in the market</p>
+                <p>Popular Item in the Market</p>
                 <h1>Top <span>Deal</span></h1>
             </div>
             <div class="Product-featured" fxLayout="row">
@@ -1628,6 +1706,91 @@
             </div>
         </div>
     </div>
+
+
+
+
+    <div class="category-featured-amazon ">
+            <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
+                fxFlex.lg="1270px" fxFlex.xl="1910px">
+                <div class="heading">
+                    <p> Shop  Amazon Categories</p>
+                    <h1> Top rated and best <span>Products</span></h1>
+                </div>
+                <div class="category-featured amz" fxLayout="row">
+                    <div class="products-text">
+                        <div class="products_all">
+                            <h1> Find your ideal TV </h1>
+                            <a>
+                                <img src="/assets/images/all1.jpg">
+                            </a>
+                            <p>View More</p>
+                        </div>
+                        <div class="products_all">
+                            <h1> Get fit at home
+                                </h1>
+                                <img src="/assets/images/all2.jpg">
+                            <a>
+                               </a>
+                            <p>View More</p>
+                        </div>
+                    </div>
+                    <div class="products-text">
+                        <div class="products_all">
+                            <h1> Shop by Category
+                            </h1>
+                            <a>
+                                    <img src="/assets/images/all3.jpg">
+                                </a>
+                            <p>View More</p>
+                        </div>
+                        <div class="products_all">
+                            <h1>Best Wooden Matrial </h1>
+                            <a>
+                                    <img src="/assets/images/all4.jpg">
+                                </a>
+                            <p>View More</p>
+                        </div>
+                    </div>
+                    <div class="products-text">
+                        <div class="products_all">
+                            <h1> Find All Baby Products </h1>
+                            <a>
+                                    <img src="/assets/images/all5.jpg">
+                                </a>
+                            <p>View More</p>
+                        </div>
+                        <div class="products_all">
+                            <h1>Shop by Category
+                            </h1>
+                            <a>
+                                    <img src="/assets/images/all6.jpg">
+                                </a>
+                            <p>View More</p>
+                        </div>
+                    </div>
+                    <div class="products-text lastpic-d">
+                        <div class="products_all">
+                            <a class="imgb">
+                                <img src="/assets/images/off4.jpg">
+                            </a>
+                            <div class="products_all mid-img-p">
+                                    <h1>Shop by Category
+                                    </h1>
+                                    <a>
+                                            <img src="/assets/images/all7.jpg">
+                                        </a>
+                                    <p>View More</p>
+                                </div>
+                                <a class="imgb">
+                                        <img src="/assets/images/off3.jpg">
+                                    </a>
+                        </div>
+                    </div>
+    
+                </div>
+            </div>
+        </div>
 
     <!----------top-deal-------------->
 
