--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -821,8 +821,8 @@ section.home.amazonhome3 .allcate {
 }
 .cate-text {
     background: #f8f8f8;
-    width: 14.5%;
-    margin: 1.3% 0.7% 0;
+    width: 15.8%;
+    margin: 0.8% 0.4% 0;
     padding-bottom: 1.5pc;
 
 }
@@ -960,4 +960,83 @@ section.home.mobile-home.amazonhome1 .cate-text h1 {
 }
 .review-blog:hover{
     color: #fff;
+}
+
+
+.products-text {
+    width: 24%;
+    margin: 0.5%;
+}
+.products-text img{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 3px;
+}
+.products_all {
+    background: #f0f0f0;
+    background: #f8f8f8;
+    margin: 0% 0 4%;
+    padding: 1pc 1pc 0.5pc;
+}
+.products_all h1 {
+    font-size: 17px;
+    margin: 0;
+    padding: 5px 5px 0.6pc;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
+}
+.products_all p {
+    font-size: 12px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 500;
+    letter-spacing: 0.3px;
+    color: #515151;
+    padding: 1pc 0 5px;
+
+}
+.products-text.lastpic-d .products_all {
+    background: transparent;
+    padding: 0 1pc;
+}
+.products-text.lastpic-d a.imgb img {
+    height: 170px;
+}
+.products-text.lastpic-d .mid-img-p{
+    background: #f8f8f8;
+    margin: 1pc 0;
+    padding: 1pc;
+}
+
+section.amazonheader.amazonheader1 .products-text img {
+    width: 100%;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 3px;
+}
+section.amazonheader.amazonheader1 .products-text {
+    width: 49%;
+    margin: 0.5%;
+}
+section.home.mobile-home.amazonhome1 .category-featured.amz {
+    flex-wrap: wrap;
+}
+section.home.mobile-home.amazonhome1 .products-text {
+    width: 49%;
+}
+section.home.mobile-home.amazonhome1 .products-text img {
+    height:100px;
+}
+section.home.mobile-home.amazonhome1 .products_all h1 {
+    font-size: 15px;
+    line-height: 20px;
+}
+
+section.home.mobile-home.amazonhome2 .products_all h1 {
+    font-size: 14px;
+    line-height: 20px;
+
+}
+.category-featured-amazon.allbanners-i {
+    padding-bottom: 2pc;
 }
