--- a/src/app/layout/blog-two/blog-two.component.html
+++ b/src/app/layout/blog-two/blog-two.component.html
@@ -45,11 +45,11 @@
                     {{paragraph.para}}
                 </p>
 
-                <button class="buy">
+                <!-- <button class="buy">
                     <a target="blank" href="{{blog.productLink}}">
                         <mat-icon>play_arrow</mat-icon>Buy Now
                     </a>
-                </button>
+                </button> -->
 
 
             </div>
